v0.6.3/developers/testnet.mdx
---
title: Mev-commit Testnet
sidebarTitle: Testnet
---

Live with Holesky, mev-commit allows bidders and providers to engage in execution service bids and commitments. Preconfirmations, the first use case for real-time bids and commitments, are available with mev-commit.

## **Links and Connection Details**

### **Services links**

| Service           | Link                                                                                           |
| ----------------- | ---------------------------------------------------------------------------------------------- |
| Testnet RPC       | [https://chainrpc.testnet.mev-commit.xyz/](https://chainrpc.testnet.mev-commit.xyz/)           |
| Testnet WebSocket | [wss://chainrpc-wss.testnet.mev-commit.xyz](wss://chainrpc-wss.testnet.mev-commit.xyz)         |
| Bootnode endpoint | [https://bootnode.testnet.mev-commit.xyz/](https://bootnode.testnet.mev-commit.xyz/)           |
| Block explorer    | [http://explorer.testnet.mev-commit.xyz](http://explorer.testnet.mev-commit.xyz)               |
| Faucet            | [http://faucet.testnet.mev-commit.xyz/](http://faucet.testnet.mev-commit.xyz/)                 |

### **Core Contract Addresses (Mev-commit chain)**

import { BidderRegistryAddress, ProviderRegistryAddress, PreconfManagerAddress, OracleAddress, BlockTrackerAddress } from '/snippets/testnet-addresses.mdx';

<table>
  <thead>
    <tr>
      <th width="299">Contract</th>
      <th>Address</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>BidderRegistry</td>
      <td>{BidderRegistryAddress}</td>
    </tr>
    <tr>
      <td>ProviderRegistry</td>
      <td>{ProviderRegistryAddress}</td>
    </tr>
    <tr>
      <td>PreconfManager</td>
      <td>{PreconfManagerAddress}</td>
    </tr>
    <tr>
      <td>Oracle</td>
      <td>{OracleAddress}</td>
    </tr>
    <tr>
      <td>BlockTracker</td>
      <td>{BlockTrackerAddress}</td>
    </tr>
  </tbody>
</table>

### **Validator Registry Contract Addresses (Holesky)**

import { ValidatorOptInRouterAddress, VanillaRegistryAddress, MevCommitAVSAddress, MevCommitMiddlewareAddress } from '/snippets/testnet-addresses.mdx';

<table>
  <thead>
    <tr>
      <th width="299">Contract</th>
      <th>Address</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>ValidatorOptInRouter</td>
      <td>{ValidatorOptInRouterAddress}</td>
    </tr>
    <tr>
      <td>VanillaRegistry</td>
      <td>{VanillaRegistryAddress}</td>
    </tr>
    <tr>
      <td>MevCommitAVS</td>
      <td>{MevCommitAVSAddress}</td>
    </tr>
    <tr>
      <td>MevCommitMiddleware</td>
      <td>{MevCommitMiddlewareAddress}</td>
    </tr>
  </tbody>
</table>

### **Other addresses (Holesky)**

import { MevCommitNetworkAddress } from '/snippets/testnet-addresses.mdx';

<table>
  <thead>
    <tr>
      <th width="299">Entity</th>
      <th>Address</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Mev-commit (Symbiotic) Network Address</td>
      <td>{MevCommitNetworkAddress}</td>
    </tr>
  </tbody>
</table>

## How can users provide feedback or report issues encountered on the testnet?

Users can open an issue on the GitHub repository that is associated with any issue they encounter. They can also tag @primev_xyz on Twitter, or reach out to us to join a Telegram group for early power users.

## Testnet System Requirements

Please refer to the System Requirements section [here.](/v0.6.3/developers/system-requirements)
